# vlc-visualizations

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: WINDOWS.md
scripts/: install-windows.ps1
src/: breakout_advanced_visualizer.c  breakout_visualizer.c  led_segments.c  spectrum_info.c  tempest_visualizer.c  trackinfo_visualizer.c  visualizer_common.c  visualizer_common.h
